Container margin fix (#3)
Removed extra margin from container

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -99,7 +99,7 @@ body {
   ================================================================================================================
 */
 .container {
-  margin: 0 auto;
+  margin: 0;
   padding: 0 20px;
   max-width: 375px;
 }
@@ -112,7 +112,7 @@ body {
 
 @media (min-width:768px) {
   .container {
-    margin: 0 auto;
+    margin: 0;
     padding: 0 32px;
     max-width: 768px;
   }
@@ -126,7 +126,7 @@ body {
 
 @media (min-width:1280px) {
   .container {
-    margin: 0 auto;
+    margin: 0;
     padding: 0 32px;
     max-width: 1280px;
   }
